fixed null jam in user dto