@@ -25,10 +25,7 @@ import java.security.KeyFactory;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.time.Instant;
-import java.util.Base64;
-import java.util.Date;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -113,7 +110,8 @@ public class TestsUtils {
                 "FR",
                 "test-provider",
                 "11111111",
-                Set.of("ROLE_USER")
+                Set.of("ROLE_USER"),
+                Collections.emptySet()
         );
     }
 
@@ -125,7 +123,8 @@ public class TestsUtils {
                 "FR",
                 "test-provider",
                 "11111111",
-                Set.of("ROLE_USER")
+                Set.of("ROLE_USER"),
+                Collections.emptySet()
         );
     }
 
